--- a/tests/testconfig.yml
+++ b/tests/testconfig.yml
@@ -1,3 +1,1 @@
-DecompositionType: QR
-MatrixFileName: ../data/m3.csv
-MatrixSize: 3
+DecompositionType : QR MatrixFileName :../ data / m3.csv MatrixSize : 3
